--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
       <version>4.12.1</version>
     </dependency>
 
+      <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
+      <dependency>
+          <groupId>io.qameta.allure</groupId>
+          <artifactId>allure-testng</artifactId>
+          <version>2.24.0</version>
+      </dependency>
   </dependencies>
     <build>
         <plugins>
